--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "better-sqlite3"
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "msgpackr-extract",
+      "protobufjs"
     ]
   }
 }
