--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
     "@opentelemetry/sdk-trace-base": "^1.30.1",
     "@opentelemetry/sdk-trace-node": "^1.30.1",
+    "@opentelemetry/resources": "^1.30.1",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.69.0",
     "@types/better-sqlite3": "^7.6.12",
