--- a/package.json
+++ b/package.json
@@ -14,54 +14,54 @@
     "exercise": "tsx --env-file=.env"
   },
   "dependencies": {
-    "@effect/printer": "^0.41.12",
-    "@effect/printer-ansi": "^0.41.12",
-    "@slidev/cli": "^51.4.0",
+    "@effect/printer": "^0.42.8",
+    "@effect/printer-ansi": "^0.42.8",
+    "@slidev/cli": "^51.5.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@effect-rx/rx-react": "^0.31.9",
+    "@effect-rx/rx-react": "^0.31.17",
     "@effect/eslint-plugin": "^0.3.0",
-    "@effect/experimental": "^0.43.3",
-    "@effect/language-service": "^0.4.0",
-    "@effect/opentelemetry": "^0.44.12",
-    "@effect/platform": "^0.79.3",
-    "@effect/platform-node": "^0.75.3",
-    "@effect/vitest": "^0.19.10",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.57.2",
-    "@opentelemetry/sdk-trace-base": "^1.30.1",
-    "@opentelemetry/sdk-trace-node": "^1.30.1",
-    "@opentelemetry/resources": "^1.30.1",
-    "@tailwindcss/vite": "^4.0.14",
-    "@tanstack/react-query": "^5.69.0",
-    "@types/better-sqlite3": "^7.6.12",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.11",
-    "@types/react-dom": "^19.0.4",
-    "@vitest/expect": "^3.0.9",
+    "@effect/experimental": "^0.44.8",
+    "@effect/language-service": "^0.6.0",
+    "@effect/opentelemetry": "https://pkg.pr.new/Effect-TS/effect/@effect/opentelemetry@9a0dfa6",
+    "@effect/platform": "^0.80.8",
+    "@effect/platform-node": "^0.76.16",
+    "@effect/vitest": "^0.20.8",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.74.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "@vitest/expect": "^3.1.1",
     "better-sqlite3": "^11.9.1",
-    "effect": "^3.13.12",
-    "eslint": "^9.22.0",
-    "eslint-import-resolver-typescript": "^4.2.1",
-    "eslint-plugin-import-x": "^4.8.1",
+    "effect": "^3.14.8",
+    "eslint": "^9.24.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import-x": "^4.10.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sort-destructure-keys": "^2.0.0",
     "express": "^4.21.2",
-    "openai": "^4.87.3",
+    "openai": "^4.93.0",
     "prettier": "^3.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.1.3",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "vitest": "^3.0.9"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "vitest": "^3.1.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
